--- a/portfolio.html
+++ b/portfolio.html
@@ -159,15 +159,52 @@
 
     <!-- Підвал -->
     <footer class="footer">
-       <div class="container">
+      <div class="container main-container-footer">
         <div class="container-footer">
-           <a href="./index.html" class="logo link">Web<span class="spart-logo logo-footer">Studio</span></a>
+          <a href="./index.html" class="logo link"
+            >Web<span class="spart-logo logo-footer">Studio</span></a
+          >
           <p class="text-footer">
-            Increase the flow of customers and sales for your business with digital
-            marketing & growth solutions.
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
           </p>
-        </div >
-       </div>
+        </div>
+        <div class="social-footer">
+          <p>Social media</p>
+          <div>
+            <ul class="footer-links list">
+              <li class="item">
+                <a href="#">
+                  <svg class="footer-social-links">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a href="#">
+                  <svg class="footer-social-links">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a href="#">
+                  <svg class="footer-social-links">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a href="#">
+                  <svg class="footer-social-links">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
