--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
       <div class="container-header container">
         <nav class="main-nav">
           <a href="./index.html" class="logo link"
-            >Web<span class="spart-logo">Studio</span></a
-          >
+            >Web<span class="spart-logo">Studio</span></a>
 
-          <ul class="site-nav list link">
+          <ul class="site-nav list">
             <li class="item"><a href="./index.html" class="link">Studio</a></li>
             <li class="item">
               <a href="./portfolio.html" class="link">Portfolio</a>
@@ -41,7 +40,7 @@
         <address class="address">
           <ul class="auth-nav list">
             <li class="item">
-              <a href="mailto:info@devstudio.com" class="auth-nav-link link"
+              <a href="mailto:info@devstudio.com" class="auth-nav-link link mail"
                 >info@devstudio.com</a
               >
             </li>
@@ -379,48 +378,51 @@
         </div>
       </section>
 
+
+
+      <!-- Клієнти -->
       <section class="customers">
         <h2 class="section-title customers-title">Customers</h2>
 
         <div class="container">
-          <ul class="customers-link list">
+          <ul class="customers-list list">
             <li class="item">
-              <a href="">
+              <a href="" class="customers-link">
                 <svg class="customers-logo">
                   <use href="./images/symbol-defs.svg#icon-client-1"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a href="" class="customers-link">
                 <svg class="customers-logo">
                   <use href="./images/symbol-defs.svg#icon-client-2"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a href="" class="customers-link">
                 <svg class="customers-logo">
                   <use href="./images/symbol-defs.svg#icon-client-3"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a href="" class="customers-link">
                 <svg class="customers-logo">
                   <use href="./images/symbol-defs.svg#icon-client-4"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a href="" class="customers-link">
                 <svg class="customers-logo">
                   <use href="./images/symbol-defs.svg#icon-client-5"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a href="" class="customers-link">
                 <svg class="customers-logo">
                   <use href="./images/symbol-defs.svg#icon-client-6"></use>
                 </svg>
