--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
   
         <address class="address">
           <ul class="auth-nav list">
-            <li class="item"><a href="mailto:info@devstudio.com" class="auth-nav-link link">info@devstudio.com</a></li>
+            <li class="item"><a href="mailto:info@devstudio.com" class="auth-nav-link mail link">info@devstudio.com</a></li>
             <li class="item"><a href="tel:+110001111111" class="auth-nav-link link">+11 (000) 111-11-11</a></li>
           </ul>
         </address>
@@ -170,7 +170,7 @@
           </p>
         </div>
         <div class="social-footer">
-          <p>Social media</p>
+          <p class="text-footer text-footer-social">Social media</p>
           <div>
             <ul class="footer-links list">
               <li class="item">
